--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
-file (GLOB MY_SOURCE_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} *.cpp)
-target_sources (${CMAKE_PROJECT_NAME} PRIVATE ${MY_SOURCE_FILES})
+﻿file (GLOB MY_SOURCE_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} *.cpp)
+list (FILTER MY_SOURCE_FILES EXCLUDE REGEX "main.cpp")
+target_sources (obj PRIVATE ${MY_SOURCE_FILES})
+target_sources (${CMAKE_PROJECT_NAME} PRIVATE main.cpp)
+
